--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+	<Button
+		android:id="@+id/take_photos"
+		android:text="拍照"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
 	<SurfaceView
 	    android:id="@+id/sfv_preview"
 	    android:layout_width="match_parent"
