--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#3F71B7"
     android:orientation="vertical"
-    tools:context="com.example.demo.MainActivity">
+    tools:context="com.example.demo.activity.MainActivity">
 
     <Button
         android:id="@+id/button_register"
