--- a/app/src/main/res/layout/activity_process.xml
+++ b/app/src/main/res/layout/activity_process.xml
@@ -8,12 +8,12 @@
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="4" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <LinearLayout
@@ -52,16 +52,34 @@
                 android:layout_weight="2"
                 android:gravity="center"
                 android:text="色号" />
-
-            <ImageView
-                android:id="@+id/sehao"
-                android:layout_width="200dp"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="8" />
+                android:layout_weight="8">
+
+
+                <ImageView
+                    android:id="@+id/sehao"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5" />
+                <ImageView
+                    android:id="@+id/background"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5" />
+            </LinearLayout>
+
         </LinearLayout>
 
 
     </LinearLayout>
 
-
+<Button
+    android:text="更换"
+    android:id="@+id/change"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"/>
 </LinearLayout>
